--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,17 @@
 <resources>
-    <string name="app_name">baabae</string>
+    <string name="app_name">BaaBae</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
 
-
-<string-array name="planets_array">
-    <item>0</item>
-    <item>4</item>
-    <item>5</item>
-    <item>6</item>
-    <item>10</item>
-    <item>15</item>
-    <item>20</item>
-   </string-array>
+    <string-array name="planets_array">
+        <item>0</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+    </string-array>
 </resources>
